# context-automator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  context-automator-fixes_2.bundle  context-automator-sektor-standardi-fix.bundle  context-automator-sektor-standardi-fix.patch  pyproject.toml  test_agent.py
.github/workflows/: tests.yml
src/context_automator/: cli.py  config.py  gitutil.py  ide_paths.py  mcp_server.py  util.py
src/context_automator/adapters/: vscode_family.py
src/context_automator/capture/: git_state.py  session_logger.py
src/context_automator/db/: schema.py
src/context_automator/restore/: file_restorer.py  ide_launcher.py
src/vision_processor/: processor.py  test_vision.py  watcher.py
tests/: test_config.py  test_git_state.py  test_gitutil.py  test_ide_launcher_safety.py  test_schema_and_util.py  test_vscode_family.py
