[project]
name = "context-automator"
version = "0.1.0"
description = "Geliştirme ortamı snapshot/restore aracı (Cursor & VS Code, MCP üzerinden)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
context-automator = "context_automator.cli:main"
context-automator-mcp = "context_automator.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
