[project]
name = "context-automator"
version = "0.1.0"
description = "Geliştirme ortamı snapshot/restore aracı (Cursor & VS Code, MCP üzerinden)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]
# Not: psutil eskiden buradaydı ama kod tabanında hiç kullanılmıyordu (IDE
# process-readiness check'i için planlanmış ama hiç yazılmamıştı) — kaldırıldı.
# httpx ve python-dotenv session_logger.py tarafından fiilen kullanılıyor ama
# önceden burada deklare edilmemişti; README'de "ayrıca elle kur" diye
# yamanmıştı. Artık `pip install -e .` tek başına yeterli.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
context-automator = "context_automator.cli:main"
context-automator-mcp = "context_automator.mcp_server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
